@@ -1,6 +1,6 @@
 {
   "name": "simp-simp_ds389",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "author": "simp",
   "summary": "Profile module for SIMP DS389 server",
   "license": "Apache-2.0",
@@ -50,6 +50,12 @@
     },
     {
       "operatingsystem": "Rocky",
+      "operatingsystemrelease": [
+        "8"
+      ]
+    },
+    {
+      "operatingsystem": "AlmaLinux",
       "operatingsystemrelease": [
         "8"
       ]
